# MLSTEM2026

./: .gitignore  README.md  pyproject.toml
Day 1/: 09AM_Aberrations.ipynb  09AM_Electron_Optics.ipynb  10AM_AberrationCorrection.ipynb
Day 2/: 1PM_Analyze_CBED_Pattern.ipynb  3PM_Compressed_Sensing.ipynb  4PM_Hackathon_Digital_Twin.ipynb  pyproject.toml
Day 3/: 10AM_Acquire_EDS_Spectra.ipynb  11AM_Analyse EDS.ipynb  11AM_Analyze_EDS.ipynb  3PM_Analyse_CoreLoss_EELS.ipynb  3PM_Analyse_LowLoss_EELS.ipynb
Day 4 /:  4PM_Hackaton_Day4__Agentic_analysis.ipynb
